:sparkles: 新增舒心token接口
