# docs/swagger.json
@@ -7,7 +7,7 @@
     },
     "host": "localhost:8800",
     "paths": {
-        "/user/login": {
+        "/login": {
             "post": {
                 "description": "用户登录",
                 "consumes": [
@@ -17,7 +17,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "users"
+                    "global"
                 ],
                 "summary": "用户登录",
                 "parameters": [
@@ -27,7 +27,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handler.LoginReq"
+                            "$ref": "#/definitions/handler.LoginParams"
                         }
                     }
                 ],
@@ -40,7 +40,7 @@
                         }
                     },
                     "400": {
-                        "description": "{\"code\":400,\"msg\":\"xxxxx\"}",
+                        "description": "{\"code\":400,\"msg\":\"xxxxx\",token:\"xxxx\"}",
                         "schema": {
                             "type": "object",
                             "additionalProperties": true
@@ -49,7 +49,7 @@
                 }
             }
         },
-        "/user/register": {
+        "/register": {
             "post": {
                 "description": "用户注册",
                 "consumes": [
@@ -59,7 +59,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "users"
+                    "global"
                 ],
                 "summary": "用户注册",
                 "parameters": [
@@ -69,7 +69,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handler.UserReq"
+                            "$ref": "#/definitions/handler.UserParams"
                         }
                     }
                 ],
@@ -91,7 +91,7 @@
                 }
             }
         },
-        "/user/sendCode": {
+        "/sendCode": {
             "post": {
                 "description": "发送注册手机验证码",
                 "consumes": [
@@ -101,7 +101,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "users"
+                    "global"
                 ],
                 "summary": "发送注册手机验证码",
                 "parameters": [
@@ -111,7 +111,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handler.SendCodeReq"
+                            "$ref": "#/definitions/handler.SendCodeParams"
                         }
                     }
                 ],
@@ -132,11 +132,45 @@
                     }
                 }
             }
+        },
+        "/user/info": {
+            "post": {
+                "description": "获取用户信息",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "获取用户信息",
+                "responses": {
+                    "200": {
+                        "description": "{\"code\":200,\"msg\":\"获取用户信息成功\",\"data\":UserDTO}",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "400": {
+                        "description": "{\"code\":400,\"msg\":\"xxxxx\"}",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
-        "handler.LoginReq": {
+        "handler.LoginParams": {
             "type": "object",
+            "required": [
+                "type"
+            ],
             "properties": {
                 "code": {
                     "type": "string"
@@ -148,13 +182,17 @@
                 "phone": {
                     "type": "string"
                 },
+                "type": {
+                    "description": "登录类型，phone 或 username",
+                    "type": "string"
+                },
                 "username": {
                     "description": "用户名",
                     "type": "string"
                 }
             }
         },
-        "handler.SendCodeReq": {
+        "handler.SendCodeParams": {
             "type": "object",
             "required": [
                 "phone"
@@ -165,7 +203,7 @@
                 }
             }
         },
-        "handler.UserReq": {
+        "handler.UserParams": {
             "type": "object",
             "required": [
                 "code",
